# BKTransformer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  training_test.yml
src/knowledge_tracing/: cli.py  main.py  train.py
src/knowledge_tracing/data/: __init__.py  datasets.py  preprocessing.py  validation.py
src/knowledge_tracing/models/: bk_transformer.py  bk_transformer_baseline.py  model.py  model_original.py
src/knowledge_tracing/training/: __init__.py  lightning_module.py
tests/: test_main.py  test_preprocessing.py  test_training.py
