[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-tracing"
version = "0.1.0"
description = "Knowledge tracing models and training pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Sohn Jun Ho" }
]
dependencies = [
  "numpy==2.4.3",
  "pandas==3.0.1",
  "torch==2.6.0",
  "torchao==0.6.1",
  "torchtune==0.6.1",
  "pytorch-lightning==2.6.1",
  "torchmetrics==1.9.0",
]

[project.optional-dependencies]
notebooks = [
  "jupyterlab==4.5.6",
  "ipykernel==7.2.0",
]
dev = [
  "pytest==9.0.2",
  "ruff==0.15.5",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
  { index = "pytorch-cpu", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
exclude = [
  "data/*.ipynb",
  "notebooks/",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
